--- a/src/index.css
+++ b/src/index.css
@@ -73,4 +73,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  html{
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 }
