--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
  
     --primary: 241 91 5;
     --primary-foreground: 210 40% 98%;
+
+    --btn-primary:190 100 49 100%;
  
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
