--- a/src/pages/home/banner/Banner.css
+++ b/src/pages/home/banner/Banner.css
@@ -2,7 +2,7 @@
 
 .newPackagesBg{
     background-image: url("../../../assets/Photos/Frame 1.png");
-    height: 708px;
+    height: 100%;
     background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
